biber (2.16-2) UNRELEASED; urgency=medium

  [ Hilmar Preusse ]
  * Move links/install overrides from d/rules into separate files.

  [ Debian Janitor ]
  * Remove constraints unnecessary since buster:
    + Build-Depends: Drop versioned constraint on libconfig-autoconf-perl,
      libextutils-libbuilder-perl, liblingua-translit-perl,
      libtest-pod-coverage-perl and libtest-pod-perl.
    + biber: Drop versioned constraint on liblingua-translit-perl and
      libunicode-collate-perl in Depends.

 -- Hilmar Preusse <hille42@web.de>  Tue, 09 Feb 2021 23:40:25 +0100

biber (2.16-1) unstable; urgency=medium

  * New upstream release: refresh patches.
  * Standards version 4.5.1, no changes needed.
  * Tighten BD libunicode-collate-perl (>= 1.29).
  * Add libio-string-perl to BD.

  * Lintian:
    - E: malformed-override: Unknown tag versioned-dependency-satisfied-by-perl
    - W: bad-whatis-entry
    - I: debian-watch-contains-dh_make-template
    - I: typo-in-manual-page
    - I: patch-not-forwarded-upstream
    - P: silent-on-rules-requiring-root
    - P: duplicate-in-relation-field
    - P: package-uses-old-debhelper-compat-version

 -- Hilmar Preusse <hille42@web.de>  Sat, 09 Jan 2021 17:57:45 +0100

biber (2.15-1) unstable; urgency=medium

  * New upstream version 2.15
  * update patches
  * bump standards version, no changes necessary

 -- Norbert Preining <norbert@preining.info>  Fri, 21 Aug 2020 17:08:40 +0900

biber (2.14+1-1) unstable; urgency=medium

  [ Debian Janitor ]
  * Trim trailing whitespace.
  * Use secure copyright file specification URI.
  * Move source package lintian overrides to debian/source.
  * Bump debhelper from deprecated 9 to 12.
  * Set debhelper-compat version in Build-Depends.
  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
    Repository-Browse.

  [ Hilmar Preusse ]
  * Copy file lib/Biber/Output/bblxml.pm from upstream.
    First attempt for #968200.
  * Clean up some files created during build.
